--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
     "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.1",
     "node-fetch": "^2.2.0",
     "nprogress": "^0.2.0",
@@ -48,6 +49,7 @@
     "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-exponentiation-operator": "^7.1.0",
     "@babel/plugin-transform-react-jsx": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-plugin-inline-import": "^3.0.0",
